--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "About"
-      href: about.html
+    - text: "Total"
+      href: total.html
+    - text: "Conclusion"
+      href: conclusion.html
 output: distill::distill_article
